# SerialPortTool

Scanso/: CMakeLists.txt  main.cpp  vcpkg.json
Scanso/include/: CreateLicense.hpp  ScanNetwork.h  ScanWidget.h
Scanso/pem/: private.pem  public.pem
Scanso/src/: ScanNetwork.cpp  ScanWidget.cpp
SerialPortTool/: CMakeLists.txt  main.cpp
SerialPortTool/include/: DataStruct.h  SerialPort.h  widget.h
SerialPortTool/resources/: res.qrc
SerialPortTool/src/: SerialPort.cpp  widget.cpp
